Fix some visual bugs
bugs fixed:
- no border radius for weather cards on smaller screens
    fix: removed gutter for bootstrap row
- today's tempreture overflowed due to big font selection
    fix: chose smaller font

not fixed:
- nav bar element sizes on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,6 @@ nav ul li {
 		border: rgb(0, 155, 216) solid 2px;
 	}
 }
-nav ul li:hover {
-}
 
 body {
 	font-family: "Quicksand", sans-serif;
@@ -33,9 +31,11 @@ body {
 	}
 }
 
-.container {
-	width: 75% !important;
-	margin: auto;
+@media (min-width: 992px) {
+	.container {
+		width: 75% !important;
+		margin: auto;
+	}
 }
 
 input {
@@ -50,7 +50,7 @@ input {
 }
 
 button {
-	padding: 10px 30px !important;
+	padding: 10px 20px !important;
 	right: 5px;
 }
 
@@ -127,8 +127,8 @@ button {
 .card-main-layout {
 	.temp {
 		color: white;
-		font-size: 80px;
-		line-height: 100px;
+		font-size: 70px;
+		line-height: 80px;
 		margin: 0;
 	}
 	.weather-icon img {
